<resources>
    <string name="app_name" translatable="false">OpenTagViewer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>

    <!-- Extra Keys -->
    <string name="settings">Settings</string>
    <string name="do_import">Import</string>
    <string name="information">Information</string>
    <string name="last_updated_x">Last Updated: %1$s</string>
    <string name="location_history">Location History</string>
    <string name="refresh">Refresh</string>
    <string name="do_ring">Ring</string>
    <string name="more">More</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->
...
